--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 .hero{
-    background-image: url(/img/developer.jpg);
+    background-image: url(img/developer.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
