--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 .hero{
-    background-image: url("https://aguayo-co.s3.amazonaws.com/public/images/Branding-research.width-490.jpg");
+    background-image: url("https://originhope.com/sites/default/files/styles/article_lead_image/public/2023-04/faizur-rehman-pHPzdEHN6Os-unsplash.jpg?itok=Zxlfe32d");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
